Edit the Header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
-
+import Main from '../components/Main.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<Header />
+		<Main />
 	</main>
 </Layout>
