--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -13,30 +13,30 @@
         >
         </div>
     </div>
-    <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
-        <div class="hidden sm:mb-8 sm:flex sm:justify-center">
-            <div
-                class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
-            >
-                Announcing our next round of funding. <a
-                    href="#"
-                    class="font-semibold text-indigo-600"
-                    ><span class="absolute inset-0" aria-hidden="true"
-                    ></span>Read more <span aria-hidden="true">&rarr;</span></a
-                >
-            </div>
-        </div>
+    <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-1">    
         <div class="text-center">
             <h1
-                class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl"
+                class="text-4xl font-bold tracking-tight text-gray-900 sm:text-9xl"
             >
-                <!-- Data to enrich your online business -->
+                LoboStore
             </h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">
-                <!-- Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui
-                lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat
-                fugiat aliqua. -->
+                Explora LoboStore y descubre moda sostenible de calidad. ¡Encuentra tus prendas favoritas hoy mismo! Haz clic aquí y comienza a comprar ahora.. 
             </p>
+            <div class="hidden sm:mb-8 sm:flex sm:justify-center py-8">
+                <div
+                    class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
+                >
+                    <span>Ayuda al planeta, Ahorra Dinero Y Ofrece Estilo Único.</span><a
+                        href="https://www.google.com" 
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="font-semibold text-indigo-600"
+                        ><span class="absolute inset-0" aria-hidden="true"
+                        ></span> Read more <span aria-hidden="true">&rarr;</span></a
+                    >
+                </div>
+            </div>
         </div>
     </div>
     <div
