--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Main from '../components/Main.astro';
+import Carrusel from '../components/Carrusel.astro';
+import Login from '../components/Login.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="LoboStore">
 	<main>
 		<Header />
 		<Main />
+		<Carrusel />
+		<Footer />
 	</main>
 </Layout>
