--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Main from '../components/Main.astro';
-import Carrusel from '../components/Carrusel.astro';
-import Login from '../components/Login.astro';
-import Footer from '../components/Footer.astro';
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Main from "../components/Main.astro";
+import Carrusel from "../components/Carrusel.astro";
+import Login from "../components/Login.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="LoboStore">
+<Layout title="LoboShop">
 	<main>
-		<Header />
-		<Main />
-		<Carrusel />
-		<Footer />
+    <Header />
+    <Main />
+    <Carrusel />
+    <Footer />
 	</main>
 </Layout>
