--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -18,7 +18,7 @@
             <h1
                 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-9xl"
             >
-                LoboStore
+                LoboShop
             </h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">
                 Explora LoboStore y descubre moda sostenible de calidad. ¡Encuentra tus prendas favoritas hoy mismo! Haz clic aquí y comienza a comprar ahora.. 
