Modifying this header.astro

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -43,7 +43,7 @@
                 <button
                     type="button"
                     id="menu-button-click"
-                    class="menu-button flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900"
+                    class="menu-button flex items-center gap-x-1 text-xl font-semibold leading-6 text-gray-900"
                     aria-expanded="false"
                 >
                     Productos
@@ -246,14 +246,14 @@
 
             <a
                 href="#"
-                class="text-sm font-semibold leading-6 text-gray-900 menu-button"
+                class="text-xl font-semibold leading-6 text-gray-900 menu-button"
                 >Sobre Nosotros</a
             >
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
             <a
                 href="#"
-                class="text-sm font-semibold leading-6 text-gray-900 menu-button"
+                class="text-xl font-semibold leading-6 text-gray-900 menu-button"
                 >Iniciar Sesión <span aria-hidden="true">&rarr;</span></a
             >
         </div>
